--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 description = "An action recognition NN working with torch to detect action on still images"
 readme = "README.md"
 requires-python = ">=3.10"
-dependencies = ["torch", "torchvision>=0.18.1"]
+dependencies = [
+    "torch",
+    "torchvision>=0.18.1",
+    "matplotlib",
+    "PyQt5",
+]
